cmake_minimum_required(VERSION 3.31)
project(Assignment)

set(CMAKE_CXX_STANDARD 20)

add_executable(Assignment main.cpp
        chapter_3_example_1.cpp
        chapter_3_example_2.cpp
        chapter_3_example_3.cpp
        chapter_3.2_example_1.cpp
        chapter_3.2_example_2.cpp
        chapter_3.2_example_3.cpp
        chapter_3.2_example_4.cpp
        chapter_3.3_example_1.cpp
        chapter_3.3_example_2.cpp
        chapter_3.4_example_1.cpp
        chapter_3.4_example_2.cpp
        chapter_3.1_exercise_1.cpp
        chapter_3.1_exercise_2.cpp
        chapter_3.3_exercise_1.cpp
        chapter_3.3_exercise_2.cpp
        chapter_3.4_exercise_1.cpp
        friend_fuction_01.cpp
        chapter_4.1_example_1.cpp
        chapter_4.1_example_2.cpp
        chapter_4.1_example_3.cpp
        chapter_4.1_example_4.cpp
        chapter_4.2_example_1.cpp
        chapter_4.3_example_1.cpp
        chapter_4.4_example_1.cpp
        chapter_4.4_example_2.cpp
        chapter_4.5_example_1.cpp
        chapter_4.5_example_2.cpp
        chapter_4.5_example_3.cpp
        chapter_4.5_example_4.cpp
        chapter_4.5_example_5.cpp
        chapter_4.6_example_1.cpp
        chapter_4.6_example_2.cpp
        chapter_4.7_example_1.cpp
        chapter_4.8_example_1.cpp
        chapter_4.8_example_2.cpp
        chapter_4.9_example_1.cpp
        chapter_4.1_exercise_1.cpp
        chapter_4.1_exercise_2.cpp
        chapter_4.2_exercise_1.cpp
        chapter_4.2_exercise_2.cpp
        chapter_4.3_exercise_1.cpp
        chapter_4.4_exercise_1.cpp
        chapter_4.4_exercise_2.cpp
        chapter_4.4_exercise_3.cpp
        chapter_4.5_exercise_1.cpp
        chapter_4.5_exercise_2.cpp
        chapter_4.6_exercise_1.cpp
        chapter_4.6_exercise_2.cpp
        chapter_4.6_exercise_3.cpp
        chapter_4.7_exercise_1.cpp
        chapter_4.8_exercise_1.cpp
        chapter_4.8_exercise_2.cpp
        chapter_4.9_exercise_1.cpp
        chapter_4.9_exercise_2.cpp
        chapter_6.4_exercise_2.cpp
        chapter_6.5_example_1.cpp
        chapter_6.5_example_2.cpp
        chapter_6.5_example_3.cpp
        chapter_6.5_exercise_1.cpp
        chapter_6.5_exercise_2.cpp
        chapter_6.5_exercise_3.cpp
        chapter_6.5_exercise_4.cpp
        chapter_6.6_example_1.cpp
        chapter_6.6_exercise_1.cpp
        chapter_6.7_example_1.cpp
        chapter_6.7_example_2.cpp
        chapter_6.7_example_3.cpp
        chapter_6.7_exercise_1.cpp
        chapter_6.7_exercise_2.cpp
        chapter_10.1_example_1.cpp
        chapter_10.1_exercise_1.cpp
        chapter_10.2_example_1.cpp
        chapter_10.2_example_2.cpp
)
